done with the js part and applied a dark mode needs a bit of fixing tho🌑☀️

--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,38 @@ body {
 
   
 
-
+ /* Dark Mode */
+ body.dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  body.dark-mode header {
+    background-color: #222;
+  }
+  
+  body.dark-mode #calculator {
+    background: #444;
+  }
+  
+  body.dark-mode input {
+    background-color: #666;
+    color: #fff;
+    border: 1px solid #444;
+  }
+  
+  body.dark-mode .calc-btn {
+    background-color: #444;
+  }
+  
+  body.dark-mode .calc-btn:hover {
+    background-color: #666;
+  }
+  
+  body.dark-mode #info {
+    background: #555;
+  }
+  
 
 
 
